--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travellog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Lalu-Swamy.github.io/Travel-React/",
+  "homepage": "https://Lalu-Swamy.github.io/Travel-React",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
